--- a/src/MauiTemplatesCLI/MauiAppCS/App.xaml
+++ b/src/MauiTemplatesCLI/MauiAppCS/App.xaml
@@ -1,4 +1,24 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
+<!--#if (Net10OrLater)-->
+<!--#if (Reactor)-->
+<MauiReactorApplication
+    x:Class="MauiApp._1.App"
+    xmlns="http://schemas.microsoft.com/dotnet/maui/global"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/maui/global/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    x:ClassModifier="NotPublic"
+    mc:Ignorable="d">
+<!--#else-->
+<Application
+    x:Class="MauiApp._1.App"
+    xmlns="http://schemas.microsoft.com/dotnet/maui/global"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/maui/global/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
+<!--#endif-->
+<!--#else-->
 <!--#if (AddToolkit && AddSyncfusionToolkit)-->
 <Application
     x:Class="MauiApp._1.App"
@@ -50,6 +70,7 @@
     xmlns:local="clr-namespace:MauiApp._1"
     mc:Ignorable="d">
 <!--#endif-->
+<!--#endif-->
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -100,7 +121,11 @@
         </ResourceDictionary>
     </Application.Resources>
 <!--#if (Reactor)-->
+<!--#if (Net10OrLater)-->
+</MauiReactorApplication>
+<!--#else-->
 </local:MauiReactorApplication>
+<!--#endif-->
 <!--#else-->
 </Application>
 <!--#endif-->
